configs/gitlab/apps/networking/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: apps-gateway
  namespace: apps
spec:
  selector:
    app: istio-ingressgateway
  servers:
    - hosts:
      - app.kube.local
      port:
        name: http
        number: 80
        protocol: HTTP
